## NEWS to package MKinfer
###############################################################################

###########################################################
## Version 0.8
###########################################################
- simplified computation of quantileCI for method exact according to 
  Section 6.10.2 of Hedderich and Sachs (2020)


###########################################################
## Version 0.7
###########################################################
- introduced na.rm to volcano
- introduced new parameter corr to imputeSD
- changed http to https
- added some example code for using mice together with mi.t.test to vignette
- added function p2ses for computing a standardized effect size (SES) for 
  permutation tests.


###########################################################
## Version 0.6
###########################################################
- removed an unnecessary print in function binomDiffCI
- use lgamma instead of gamma to compute variance of SD (inside normCI)
- modified imputeSD such that correlations < -1 or > 1, which may occur, are 
  not used for the imputations, but are set to -1 or 1, respectively.


###########################################################
## Version 0.5
###########################################################
- corrected bug in wilson method in binomDiffCI (alpha was not passed through)
  detected by Takuya Yanagida.
- attribute conf.level was not set in meanCI and sdCI.


###########################################################
## Version 0.4
###########################################################
- changed return value of imputeSD
- added volcano plot


###########################################################
## Version 0.3
###########################################################
- corrected minor bug for wald-cc in binomCI and binomDiffCI
- corrected minor bug in case of bootstrap confidence intervals (conf.level 
  was not passed through)