@@ -1,6 +1,6 @@
 Package: MKinfer
 Version: 0.8
-Date: 2022-10-15
+Date: 2022-11-08
 Title: Inferential Statistics
 Authors@R: person("Matthias", "Kohl", role = c("aut", "cre"),
                   email = "Matthias.Kohl@stamats.de", 
@@ -13,5 +13,5 @@ Suggests: knitr, rmarkdown, Amelia, exactRankTests, mice, miceadds
 VignetteBuilder: knitr
 Description: Computation of various confidence intervals (Altman et al. (2000), ISBN:978-0-727-91375-3; Hedderich and Sachs (2018), ISBN:978-3-662-56657-2) including bootstrapped versions (Davison and Hinkley (1997), ISBN:978-0-511-80284-3) as well as Hsu (Hedderich and Sachs (2018), ISBN:978-3-662-56657-2), permutation (Janssen (1997), <doi:10.1016/S0167-7152(97)00043-6>), bootstrap (Davison and Hinkley (1997), ISBN:978-0-511-80284-3) and multiple imputation (Barnard and Rubin (1999), <doi:10.1093/biomet/86.4.948>) t-test. Graphical visualization by volcano plots.
 License: LGPL-3
-URL: https://www.stamats.de/
+URL: https://github.com/stamats/MKinfer
 
