@@ -10,11 +10,11 @@
 \usage{
 normCI(x, mean = NULL, sd = NULL, conf.level = 0.95, 
        boot = FALSE, R = 9999, bootci.type = "all", na.rm = TRUE, 
-       alternative = c("two.sided", "less", "greater"))
+       alternative = c("two.sided", "less", "greater"), ...)
 meanCI(x, conf.level = 0.95, boot = FALSE, R = 9999, bootci.type = "all", 
-       na.rm = TRUE, alternative = c("two.sided", "less", "greater"))
+       na.rm = TRUE, alternative = c("two.sided", "less", "greater"), ...)
 sdCI(x, conf.level = 0.95, boot = FALSE, R = 9999, bootci.type = "all", 
-     na.rm = TRUE, alternative = c("two.sided", "less", "greater"))
+     na.rm = TRUE, alternative = c("two.sided", "less", "greater"), ...)
 }
 \arguments{
   \item{x}{ vector of observations. }
@@ -28,6 +28,8 @@ sdCI(x, conf.level = 0.95, boot = FALSE, R = 9999, bootci.type = "all",
   \item{alternative}{ a character string specifying one- or two-sided confidence intervals. 
   Must be one of "two.sided" (default), "greater" or "less" (one-sided intervals). 
   You can specify just the initial letter. }
+  \item{\dots}{ further arguments passed to function \code{\link[boot]{boot}},
+  e.g. for parallel computing. }
 }
 \details{
   The standard confidence intervals for mean and standard deviation are
